src/main/java/com/example/demo/Error/EntityPresentInCollectionException.java
package com.example.demo.Error;

public class EntityPresentInCollectionException extends RuntimeException {

    public EntityPresentInCollectionException(String message) {

        super(message);
    }
}
